# ajedrez

./: Cargo.toml  README.md  board_representation.md  rustfmt.toml
gui/: Cargo.toml
gui/src/: main-bk.rs  main.rs
src/: fen.pest  fen.rs  lib.rs  main.rs  pgn.pest  pgn.rs  tests.rs
tests/: test_board.rs  test_color.rs  test_fen.rs  test_moves.rs  test_pgn.rs  test_piece.rs  tests.rs
tests/pgn_games/: anastasian-lewis.pgn  andersen_kieseritzky_1851.pgn  byrne_fischer_1956.pgn  morphy_karl_isouard_1858.pgn  shenzlong24.pgn
