[package]
name = "ajedrez"
version = "0.1.0"
edition = "2021"
authors = ["Noe Nieto<nnieto@noenieto.com>"]
description = "A naive implementation of a chess engine library"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["chess", "library"]
categories = ["game-engines"]
# Not a public project yet
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"