[package]
name = "ajedrez"
version = "0.1.0"
edition = "2021"
authors = ["Noe Nieto<nnieto@noenieto.com>"]
description = "A naive implementation of a chess engine library"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["chess", "library"]
categories = ["game-engines"]
# Not a public project yet
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.6"
regex = "1.10.2"
pest_derive = "2.7.6"
log = "0.4.20"
colored = "2.1.0"
