[package]
name = "ajedrez"
description = "A naive implementation of a chess engine library"
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[workspace]
members = [
    "gui"
]

[workspace.package]
repository = "https://github.com/misaelnieto/ajedrez/"
readme = "README.md"
version = "0.0.1"
edition = "2021"
authors = ["Noe Nieto <nnieto@noenieto.com>"]
license = "MIT OR Apache-2.0"
keywords = ["chess", "library", "game"]
categories = ["game-engines"]
# Not a public project yet
publish = false

[workspace.dependencies]
ajedrez = { version = "0.0.1", path = "." }
ajedrez_gui = { version = "0.0.1", path = "gui" }

[badges]
maintenance = { status = "experimental" }

[dependencies]
pest = "2.7.6"
regex = "1.10.2"
pest_derive = "2.7.6"
log = "0.4.20"
colored = "2.1.0"
