[package]
name = "ajedrez_gui"
description = "A chess game that uses the Ajedrez chess game engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
ajedrez = { path = "../" }
iced = { version = "0.12.1", features = ["debug", "advanced"] }
